# elas_openmp_ros

./: README.md
elas_ros/: CMakeLists.txt
elas_ros/launch/: kitti.launch
elas_ros/src/: elas.cpp
libelas/: CMakeLists.txt
